--- a/GOODONE/index.html
+++ b/GOODONE/index.html
@@ -21,7 +21,7 @@
         <div class="gamebox p-3">
     <div class="bluey">
         <div class="row">
-            <div class="col p-3"><h3>The Corporation <h6>- the game - </h6>
+            <div class="col p-3"><h3>The B.A.L.D Corporation <h6>- the game - </h6>
 
               <button class="bg-warning" onclick="intro()">SYNOPSIS</button>
               <div id="cont" style="display:none">
